--- a/reactjs_blog/package.json
+++ b/reactjs_blog/package.json
@@ -10,7 +10,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
-    "bootstrap": "^5.3.7",
+    "axios": "^1.13.2",
+    "bootstrap": "^5.3.8",
     "counterup2": "^2.0.2",
     "i18next": "^23.7.11",
     "react": "^19.2.1",
